# api/src/main/kotlin/br/com/soat/order/OrderRoutes.kt
@@ -2,9 +2,11 @@ package br.com.soat.order
 
 import br.com.soat.order.dto.CreateOrderRequestDTO
 import br.com.soat.order.dto.FinishOrderDiagnosisRequestDTO
+import br.com.soat.order.dto.OrderMetricsResponseDTO
 import br.com.soat.order.dto.OrderResponseDTO
 import br.com.soat.order.dto.OrderScheduleVehicleRequestDTO
 import br.com.soat.order.dto.OrderStatusResponseDTO
+import br.com.soat.shared.dto.PageResponseDTO
 import br.com.soat.order.dto.StartOrderDiagnosisRequestDTO
 import br.com.soat.order.model.request.FinishOrderDiagnosisRequest
 import br.com.soat.order.model.request.StartOrderDiagnosisRequest
@@ -15,133 +17,136 @@ import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.post
 import io.ktor.server.routing.get
+import io.ktor.server.routing.route
+import br.com.soat.shared.getUUIDPathParameter
+import br.com.soat.shared.getUUIDQueryParameter
 import io.ktor.server.routing.routing
-import java.util.UUID
 import org.koin.core.Koin
 
 fun Application.orderRoutes(koin: Koin) {
     val orderUseCase = koin.inject<OrderUseCase>().value
 
     routing {
-        get("/orders/quote/approve") {
-            val token = call.parameters["token"]
-                ?: return@get call.respond(HttpStatusCode.BadRequest, "Token must be present")
-            orderUseCase.approveQuote(UUID.fromString(token))
-
-            call.respond(HttpStatusCode.OK)
-        }
-
-        get("/orders/quote/decline") {
-            val token = call.parameters["token"]
-                ?: return@get call.respond(HttpStatusCode.BadRequest, "Token must be present")
-            orderUseCase.declineQuote(UUID.fromString(token))
-
-            call.respond(HttpStatusCode.OK)
-        }
-
-        get("/orders/{id}/status") {
-            val orderId = call.parameters["id"]
-                ?: return@get call.respond(HttpStatusCode.BadRequest, "Order ID must be present")
-
-            val orderUuid = try {
-                UUID.fromString(orderId)
-            } catch (e: IllegalArgumentException) {
-                return@get call.respond(HttpStatusCode.BadRequest, "Invalid Order ID format")
-            }
-
-            val order = orderUseCase.findById(orderUuid)
-
-            if (order != null) {
-                call.respond(
-                    status = HttpStatusCode.OK,
-                    message = OrderStatusResponseDTO.from(order)
-                )
-            } else {
-                call.respond(HttpStatusCode.NotFound)
-            }
-        }
-
-        authenticate("admin") {
-            post("/orders") {
-                val request = call.receive<CreateOrderRequestDTO>()
-                val createdOrder = orderUseCase.create(request.toModel())
-
-                call.respond(
-                    status = HttpStatusCode.Created,
-                    message = OrderResponseDTO.from(createdOrder)
-                )
-            }
-
-            post("/orders/{id}/start-diagnosis") {
-                val orderId = call.parameters["id"] ?: throw IllegalArgumentException("OrderId must be present")
-                val request = call.receive<StartOrderDiagnosisRequestDTO>()
-                val createdOrder = orderUseCase.startDiagnosis(
-                    StartOrderDiagnosisRequest(
-                        orderId = UUID.fromString(orderId),
-                        technician = request.technician
-                    )
-                )
-
-                call.respond(
-                    status = HttpStatusCode.OK,
-                    message = OrderResponseDTO.from(createdOrder)
-                )
-            }
-
-            post("/orders/{id}/finish-diagnosis") {
-                val orderId = call.parameters["id"] ?: throw IllegalArgumentException("OrderId must be present")
-                val request = call.receive<FinishOrderDiagnosisRequestDTO>()
-                val createdOrder = orderUseCase.finishDiagnosis(
-                    FinishOrderDiagnosisRequest(
-                        orderId = UUID.fromString(orderId),
-                        servicesIds = request.servicesIds,
-                        extraSuppliesRequests = request.extraSuppliesRequests.map { it.toModel() },
-                    )
-                )
-
-                call.respond(
-                    status = HttpStatusCode.OK,
-                    message = OrderResponseDTO.from(createdOrder)
-                )
-            }
-
-            post("/orders/{id}/schedule-delivery") {
-                val orderId = call.parameters["id"] ?: throw IllegalArgumentException("OrderId must be present")
-                val request = call.receive<OrderScheduleVehicleRequestDTO>()
-                orderUseCase.scheduleVehicleDelivery(request.toModel(UUID.fromString(orderId)))
-
+        route("/v1") {
+            get("/orders/quote/approve") {
+                val token = call.getUUIDQueryParameter("token")
+                orderUseCase.approveQuote(token)
                 call.respond(HttpStatusCode.OK)
             }
 
-            post("/orders/{id}/schedule-return") {
-                val orderId = call.parameters["id"] ?: throw IllegalArgumentException("OrderId must be present")
-                val request = call.receive<OrderScheduleVehicleRequestDTO>()
-                orderUseCase.scheduleVehicleReturn(request.toModel(UUID.fromString(orderId)))
-
+            get("/orders/quote/decline") {
+                val token = call.getUUIDQueryParameter("token")
+                orderUseCase.declineQuote(token)
                 call.respond(HttpStatusCode.OK)
             }
 
-            post("/orders/{id}/complete") {
-                val orderId = call.parameters["id"] ?: throw IllegalArgumentException("OrderId must be present")
-                val completedOrder = orderUseCase.complete(UUID.fromString(orderId))
-
-                call.respond(
-                    status = HttpStatusCode.OK,
-                    message = OrderResponseDTO.from(completedOrder)
-                )
-            }
-
-            get("/orders/{id}") {
-                val orderId = call.parameters["id"] ?: throw IllegalArgumentException("OrderId must be present")
-                val order = orderUseCase.findById(UUID.fromString(orderId))
+            get("/orders/{id}/status") {
+                val id = call.getUUIDPathParameter("id")
+                val order = orderUseCase.findById(id)
 
                 if (order != null) {
                     call.respond(
                         status = HttpStatusCode.OK,
-                        message = OrderResponseDTO.from(order)
+                        message = OrderStatusResponseDTO.from(order)
                     )
                 } else {
                     call.respond(HttpStatusCode.NotFound)
+                }
+            }
+
+            authenticate("admin") {
+                get("/orders") {
+                    val page = call.request.queryParameters["page"]?.toIntOrNull() ?: 1
+                    val ordersPage = orderUseCase.findAll(page)
+                    call.respond(HttpStatusCode.OK, PageResponseDTO.from(ordersPage, OrderResponseDTO::from))
+                }
+
+                get("/orders/metrics") {
+                    val metrics = orderUseCase.getMetrics()
+                    call.respond(HttpStatusCode.OK, OrderMetricsResponseDTO.from(metrics))
+                }
+
+                post("/orders") {
+                    val request = call.receive<CreateOrderRequestDTO>()
+                    val createdOrder = orderUseCase.create(request.toModel())
+
+                    call.respond(
+                        status = HttpStatusCode.Created,
+                        message = OrderResponseDTO.from(createdOrder)
+                    )
+                }
+
+                post("/orders/{id}/start-diagnosis") {
+                    val id = call.getUUIDPathParameter("id")
+                    val request = call.receive<StartOrderDiagnosisRequestDTO>()
+                    val createdOrder = orderUseCase.startDiagnosis(
+                        StartOrderDiagnosisRequest(
+                            orderId = id,
+                            technician = request.technician
+                        )
+                    )
+
+                    call.respond(
+                        status = HttpStatusCode.OK,
+                        message = OrderResponseDTO.from(createdOrder)
+                    )
+                }
+
+                post("/orders/{id}/finish-diagnosis") {
+                    val id = call.getUUIDPathParameter("id")
+                    val request = call.receive<FinishOrderDiagnosisRequestDTO>()
+                    val createdOrder = orderUseCase.finishDiagnosis(
+                        FinishOrderDiagnosisRequest(
+                            orderId = id,
+                            servicesIds = request.servicesIds,
+                            extraSuppliesRequests = request.extraSuppliesRequests.map { it.toModel() },
+                        )
+                    )
+
+                    call.respond(
+                        status = HttpStatusCode.OK,
+                        message = OrderResponseDTO.from(createdOrder)
+                    )
+                }
+
+                post("/orders/{id}/schedule-delivery") {
+                    val id = call.getUUIDPathParameter("id")
+                    val request = call.receive<OrderScheduleVehicleRequestDTO>()
+                    orderUseCase.scheduleVehicleDelivery(request.toModel(id))
+
+                    call.respond(HttpStatusCode.OK)
+                }
+
+                post("/orders/{id}/schedule-return") {
+                    val id = call.getUUIDPathParameter("id")
+                    val request = call.receive<OrderScheduleVehicleRequestDTO>()
+                    orderUseCase.scheduleVehicleReturn(request.toModel(id))
+
+                    call.respond(HttpStatusCode.OK)
+                }
+
+                post("/orders/{id}/complete") {
+                    val id = call.getUUIDPathParameter("id")
+                    val completedOrder = orderUseCase.complete(id)
+
+                    call.respond(
+                        status = HttpStatusCode.OK,
+                        message = OrderResponseDTO.from(completedOrder)
+                    )
+                }
+
+                get("/orders/{id}") {
+                    val id = call.getUUIDPathParameter("id")
+                    val order = orderUseCase.findById(id)
+
+                    if (order != null) {
+                        call.respond(
+                            status = HttpStatusCode.OK,
+                            message = OrderResponseDTO.from(order)
+                        )
+                    } else {
+                        call.respond(HttpStatusCode.NotFound)
+                    }
                 }
             }
         }
